# AsyncEquipmentActivation

./: README.md  docker-compose.yml  pyproject.toml
service_A/: Dockerfile  main.py
service_B/: Dockerfile  config.py  main.py  models.py  rabbit.py
worker/: Dockerfile  executor.py
