[project]
name = "asyncequipmentactivation"
version = "0.1.0"
description = ""
authors = [
    {name = "None"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "aio-pika (>=9.5.5,<10.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "rabbitmq (>=0.2.0,<0.3.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "uvicorn (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
